records/static/css/app.css
/* ... */
#form-button {
    margin-top: 55px;
}



/* ......../ MOBILE VERSION LARGE /.......... */

@media (max-width: 890px) {
    .navbar {
        opacity: 0.95;
    }

    .navbar-container input[type="checkbox"],
    .navbar-container .hamburger-lines {
        display: block;
    }

    .navbar-container {
        display: block;
        position: relative;
        height: 64px;
    }

    .navbar-container input[type="checkbox"] {
        position: absolute;
        display: block;
        height: 32px;
        width: 30px;
        top: 20px;
        left: 20px;
        z-index: 5;
        opacity: 0;
    }

    .navbar-container .hamburger-lines {
        display: block;
        height: 23px;
        width: 35px;
        position: absolute;
        top: 17px;
        left: 20px;
        z-index: 2;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }

    .navbar-container .hamburger-lines .line {
        display: block;
        height: 4px;
        width: 100%;
        border-radius: 10px;
        background: #333;
    }

    .navbar-container .hamburger-lines .line1 {
        transform-origin: 0% 0%;
        transition: transform 0.4s ease-in-out;
    }

    .navbar-container .hamburger-lines .line2 {
        transition: transform 0.2s ease-in-out;
    }

    .navbar-container .hamburger-lines .line3 {
        transform-origin: 0% 100%;
        transition: transform 0.4s ease-in-out;
    }

    .navbar .menu-items {
        padding-top: 100px;
        background: rgba(255, 255, 255, 0.8);
        height: 100vh;
        max-width: 300px;
        transform: translate(-150%);
        display: flex;
        flex-direction: column;
        margin-left: -40px;
        padding-left: 50px;
        transition: transform 0.5s ease-in-out;
        box-shadow: 5px 0px 10px 0px #aaa;

        position: fixed;
        z-index: 999;
    }

    .navbar .menu-items li {
        margin-bottom: 1.5rem;
        font-size: 1.3rem;
        font-weight: 500;
    }

    .logo {
        position: absolute;
        top: -7px;
        right: 15px;
        font-size: .5rem;
    }

    .logo-hide {
        display: block;
        text-decoration: none;
        color:rgb(80, 80, 80);

        position: absolute;
        top: 40%;
        left: 50%;
        transform: translate(-50%, -50%);
        font-size: 2rem;
    }

    .total {
        display: none;
    }
    .total-hide {
        color: rgb(80, 80, 80);
        display: block;
    }

    .search-form {
        display: flex;
        align-items: center;
        justify-content: center;
        margin-right: 25%;
    }

    .search-form > input {
        border-radius: 25px;
        margin-right: 5px;
        margin-left: auto;
        padding: 5px;
    }

    .navbar-container input[type="checkbox"]:checked ~ .menu-items {
        transform: translateX(0);
    }

    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
        transform: rotate(35deg);
    }

    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
        transform: scaleY(0);
    }

    .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
        transform: rotate(-35deg);
    }

    .album-art {
        border-radius: 8px;
        margin-bottom: 8px;
        height: 150px;
        width: 150px;
        transition: all .3s ease-in-out;
    }

    a > .album-art:hover {
        transform: scale(1.1);
    }

    .container-list-albums {
        max-width: 80%;
        height: 90%;
        padding: 3.5%;
        border-radius: 25px;
        margin-top: 1rem;
        margin-bottom: 3.6rem;
    }

    .card {
        width: 14rem;
        height: 17rem;
        margin-left: 2%;
        margin-right: 2%;
        margin-bottom: 3rem;
        text-align: center;
    }

    .artist-form {
        width: 50%;
    }

    .record-form {
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(5, 1fr);
        align-items: center;
        justify-items: center;

        padding-top: 0.938rem;
        padding-bottom: 2.188rem;

        width: 50%;

        border-radius: 25px;

        margin-top: 15px;
        margin-bottom: 50px;

        background-color: rgba(255, 255, 255, 0.6);
    }

    .record-card {
        width: 18rem;
        height: 25rem;
        text-align: center;

        border-radius: 25px;

        padding-top: 35px;
        padding-bottom: 35px;
        padding-left: 50px;
        padding-right: 50px;

        margin: 15px;
        margin-top: 45px;
    }

    .detail-record-card {
        width: 19rem;
        height: 25rem;
    }
}
/* ... */

